test/rbkt/Queries/zorba/syntax-error/syntax-error-01.spec
Error: http://www.w3.org/2005/xqt-errors:XPST0003
Error: http://www.w3.org/2005/xqt-errors:XQST0090
